--- a/src/app/template-schema-example/template-schema-example.component.html
+++ b/src/app/template-schema-example/template-schema-example.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-4">
             <h3>Form:</h3>
-            <sf-form #form [(ngModel)]="model" templateSchema>
+            <sf-form #form [(ngModel)]="model" [fieldsets]="fieldsets" templateSchema>
                 <sf-field name="recipient" type="object">
                     Part 1 - Recipient
                     <sf-field
